Changes for 1.8.3rc3

 - [ZBX-2671] fixed detection of various system headers during ./configure (asaveljevs)
 - [ZBX-2800] fixed undefined variable if update trigger with incorrect function (Vedmak)
 - [ZBX-2789] forbid active agent items to have 0 interval (Vedmak)
 - [ZBX-2794] fixed sorting in configuration web (Vedmak)
 - [ZBX-2792] fixed status sorting in maintenances (Vedmak)
 - [ZBX-2726] fixed statuses for discovery events (Vedmak)
 - [ZBX-2785] creation of empty slideshows prohibited (Vedmak)
 - [ZBX-2791] fixed host menu in "top 100 triggers" in ie7 (Vedmak)
 - [ZBX-2790] fixed maintenance times reset while configure maintenance (Vedmak)
 - [ZBX-2773] changed buttons css for DO theme (Vedmak)
 - [ZBX-2777] fixed map labels when "status only" option is set (Vedmak)
 - [ZBX-2775] updated Brazilian Portuguese translation; thanks to Murilo Moreira de Oliveira (Vedmak)
 - [DEV-468] improved theme coloring in IE (Aly)

Changes for 1.8.3rc2

 - [ZBX-2767] fixed time stamp in german locales (Aly)
 - [ZBX-2764] fixed database monitor values not being accepted from proxy (asaveljevs,Sasha)
 - [ZBX-2752] improved text coloring (Aly)
 - [ZBX-2748] fixed compilation on OpenBSD 4.7 due to undefined KERN_PROC (asaveljevs)
 - [ZBX-2758] fixed underlined filter label in Opera (Aly)
 - [ZBX-2763] fixed saving user profile (Aly)
 - [ZBX-2759] fixed item form not saving params field (Vedmak)
 - [ZBX-2762] fixed sql error when "all" hosts is selected in application popup (Vedmak)
 - [ZBX-2757] fixed calendar colors in DO theme (Vedmak)
 - [ZBX-2754] fixed possible undefined variables in frontend (Aly)
 - [ZBX-2761] improved performance in search page (Aly)
 - [ZBX-2683] minor updates for the Latvian translation (Richlv)
 - [ZBX-2741] updated French translation; thanks to Alixen (Richlv)
 - [ZBX-2700] updated Czech translation; thanks to Jakub Kalas (Richlv)
 - [ZBX-2739] fixed empty list of items when "all" selected in items popup (Vedmak)